--- a/PaymentAPI.csproj
+++ b/PaymentAPI.csproj
@@ -12,6 +12,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="MySQL.Data" Version="8.0.28" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
